// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "data": Object {
    "kim": Object {
      "person": Object {
        "name": "Kim",
      },
    },
    "tim": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`edge node fields 1`] = `
Object {
  "data": Object {
    "people": Object {
      "edges": Object {
        "0": Object {
          "node": Object {
            "name": "Tim",
          },
        },
        "1": Object {
          "node": Object {
            "name": "Kim",
          },
        },
      },
    },
  },
}
`;

exports[`first n edges 1`] = `
Object {
  "data": Object {
    "people": Object {
      "edges": Object {
        "0": Object {
          "node": Object {
            "name": "Tim",
          },
        },
        "1": Object {
          "node": Object {
            "name": "Kim",
          },
        },
      },
    },
  },
}
`;

exports[`pageInfo.hasNextPage indicates availability of next page 1`] = `
Object {
  "data": Object {
    "people": Object {
      "pageInfo": Object {
        "hasNextPage": false,
      },
    },
  },
}
`;

exports[`passes clientMutationId from input to payload  1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "clientMutationId": "123",
      "person": Object {
        "name": "Bane",
      },
    },
  },
}
`;

exports[`queries connection count ignoring first 1`] = `
Object {
  "data": Object {
    "people": Object {
      "count": 2,
    },
  },
}
`;

exports[`queries connection pageInfo.hasNextPage 1`] = `
Object {
  "data": Object {
    "people": Object {
      "pageInfo": Object {
        "hasNextPage": true,
      },
    },
  },
}
`;

exports[`queries connection pageInfo.hasPreviousPage 1`] = `
Object {
  "data": Object {
    "people": Object {
      "pageInfo": Object {
        "hasPreviousPage": false,
      },
    },
  },
}
`;

exports[`queries node with fragment 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "Tim",
    },
  },
}
`;

exports[`queries node with inline fragment 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "Tim",
    },
  },
}
`;
